Started module to compare class vs camb

--- a/hi_class_ini/planck_test.ini
+++ b/hi_class_ini/planck_test.ini
@@ -1,26 +1,11 @@
 [runtime]
-# The emcee sampler, which uses the Goodman & Weare algorithm
-sampler = emcee
+sampler = test
 root = ${PWD}
 
-[emcee]
-# The emcee sampler uses the concept of walkers, a collection
-# of live points.  Sampling is done along lines that connect
-# pairs of walkers.  The number of walkers must be at least
-# 2*nparam + 1, but in general more than that usually works
-# better.
-walkers = 32
-# This many samples is overkill, just to make the plots
-# look a lot nicer
-samples = 3
-# This is the interval at which convergence diagnostics
-# are performed
-nsteps = 10
+[test]
+save_dir=output/planck_hi_class
+fatal_errors=T
 
-[output]
-filename = output/planck.txt
-format = text
-verbosity = debug
 
 [DEFAULT]
 # This value is used below as %(planck_path)s
@@ -30,7 +15,7 @@ planck_path = likelihood/planck2018/baseline/plc_3.0
 [pipeline]
 # These names refer to sections later in the file:
 modules = consistency hi_class planck
-values = examples/hi_class_test_values.ini
+values = hi_class_ini/planck_values.ini
 quiet=F
 debug=T
 timing=F
