--- a/hi_class_ini/planck_emcee.ini
+++ b/hi_class_ini/planck_emcee.ini
@@ -1,11 +1,24 @@
 [runtime]
-sampler = test
+# The emcee sampler, which uses the Goodman & Weare algorithm
+sampler = emcee
 root = ${PWD}
 
-[test]
-save_dir=output/planck_hi_class
-fatal_errors=T
+[emcee]
+# The emcee sampler uses the concept of walkers, a collection
+# of live points.  Sampling is done along lines that connect
+# pairs of walkers.  The number of walkers must be at least
+# 2*nparam + 1, but in general more than that usually works
+# better.
+walkers = 32
+samples = 3
+# This is the interval at which convergence diagnostics
+# are performed
+nsteps = 10
 
+[output]
+filename = output/planck.txt
+format = text
+verbosity = debug
 
 [DEFAULT]
 # This value is used below as %(planck_path)s
@@ -15,7 +28,7 @@ planck_path = likelihood/planck2018/baseline/plc_3.0
 [pipeline]
 # These names refer to sections later in the file:
 modules = consistency hi_class planck
-values = examples/hi_class_test_values.ini
+values = hi_class_ini/planck_values.ini
 quiet=F
 debug=T
 timing=F
