Small fix for slurm

--- a/examples_maria/des-y1.ini
+++ b/examples_maria/des-y1.ini
@@ -8,8 +8,8 @@ sampler = test
 fast_slow = F
 first_fast_module = bin_bias
 
-values = examples/des-y1-values.ini
-priors = examples/des-y1-priors.ini
+values = /home/mberti/cosmosis-standard-library/examples_maria/des-y1-values.ini
+priors = /home/mberti/cosmosis-standard-library/examples_maria/des-y1-priors.ini
 modules =
 ;   Computes the full set of cosmological parameter, e.g. h->H_0, Omega_m->Omega_m h^2
     consistency
