--- a/examples_maria/des-y3-class.ini
+++ b/examples_maria/des-y3-class.ini
@@ -1,4 +1,4 @@
-%include examples_maria/des-y3.ini
+%include /home/mberti/cosmosis-standard-library/examples_maria/des-y3.ini
 
 
 [pipeline]
@@ -12,10 +12,10 @@ modules =  consistency  bbn_consistency
            shear_m_bias   add_point_mass
            2pt_like  shear_ratio_like
 
-values = examples_maria/des-y3-class-values.ini
+values = /home/mberti/cosmosis-standard-library/examples_maria/des-y3-class-values.ini
 
 [test]
-save_dir = output/des-y3-class_maria
+save_dir = /home/mberti/cosmosis-standard-library/output/des-y3-class_maria
 
 [extrapolate]
 file = boltzmann/extrapolate/extrapolate_power.py
