--- a/examples_maria/des-y3-maglim-priors.ini
+++ b/examples_maria/des-y3-maglim-priors.ini
@@ -1,4 +1,4 @@
-%include examples/des-y3-priors.ini
+%include /home/mberti/cosmosis-standard-library/examples_maria/des-y3-priors.ini
 
 [lens_photoz_errors]
 bias_1 = gaussian -0.009 0.007
