--- a/examples_maria/des-y3-maglim-values.ini
+++ b/examples_maria/des-y3-maglim-values.ini
@@ -1,4 +1,4 @@
-%include examples/des-y3-values.ini
+%include /home/mberti/cosmosis-standard-library/examples_maria/des-y3-values.ini
 
 [lens_photoz_errors]
 bias_1 = -0.05  0.0  0.05
