--- a/examples_maria/planck_DES_class.ini
+++ b/examples_maria/planck_DES_class.ini
@@ -1,4 +1,4 @@
-%include examples_maria/des-y3.ini
+%include /home/mberti/cosmosis-standard-library/examples_maria/des-y3.ini
 
 [runtime]
 sampler = emcee
@@ -43,7 +43,7 @@ modules = consistency hi_class planck pantheon riess21 eboss_dr16_elg eboss_dr16
            2pt_shear 2pt_gal  2pt_gal_shear
            shear_m_bias   add_point_mass
            2pt_like  shear_ratio_like
-values = examples_maria/planck_DES_values_MG.ini 
+values =  /home/mberti/cosmosis-standard-library/examples_maria/planck_DES_values_MG.ini 
 quiet=F
 debug=T
 timing=F
