--- a/examples_maria/planck_class.ini
+++ b/examples_maria/planck_class.ini
@@ -1,5 +1,5 @@
-#%include examples_maria/des-y3.ini
-%include examples_maria/des-y3-class.ini
+#%include /home/mberti/cosmosis-standard-library/examples_maria/des-y3.ini
+%include /home/mberti/cosmosis-standard-library/examples_maria/des-y3-class.ini
 
 [runtime]
 sampler = emcee
@@ -22,21 +22,21 @@ nsteps = 10
 
 
 [output]
-filename = output/planck_lensing_pantheon_BAO_SHOES_DESy3_class_maria.txt
+filename = /home/mberti/cosmosis-standard-library/output/planck_lensing_pantheon_BAO_SHOES_DESy3_class_maria.txt
 format = text
 verbosity = debug
 
 
 [DEFAULT]
 ; This value is used below as %(planck_path)s
-planck_path = likelihood/planck2018/baseline/plc_3.0
+planck_path = /home/mberti/cosmosis-standard-library/likelihood/planck2018/baseline/plc_3.0
 
 
 [pipeline]
 ; these names refer to sections later in the file:
 modules = consistency hi_class planck pantheon riess21 eboss_dr16_elg eboss_dr16_lrg eboss_dr16_lya eboss_dr16_qso mgs 6dfgs
           extrapolate
-values = examples_maria/planck_values_MG_new.ini 
+values = /home/mberti/cosmosis-standard-library/examples_maria/planck_values_MG_new.ini 
 quiet=F
 debug=T
 timing=F
