--- a/examples_maria/pantheon.ini
+++ b/examples_maria/pantheon.ini
@@ -30,7 +30,7 @@ verbosity = debug
 ; Riess 2011 to anchor H0, which is otherwise degenerate
 ; with the nuisance parameter M
 modules = consistency class pantheon riess21
-values = examples/pantheon_values.ini
+values =/home/mberti/cosmosis-standard-library/examples_maria/pantheon_values.ini
 extra_output =
 quiet=T
 debug=F
