implemented start_points module

--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,4 @@ likelihood/planck2018/baseline/
 likelihood/planck2018/COM_Likelihood_Data-baseline_R3.00.tar.gz
 logs/
 
-hi_class_ini/*.sh
-hi_class_ini/*.ini
-!hi_class_ini/planck_emcee.ini
-!hi_class_ini/planck_test.ini
-!hi_class_ini/planck_values.ini
+hi_class_ini/*
