--- a/examples/act-dr6-lens.ini
+++ b/examples/act-dr6-lens.ini
@@ -6,6 +6,10 @@ root = ${PWD}
 save_dir=output/act_dr6_lens
 fatal_errors=T
 
+[nautilus]
+n_live = 1500
+verbose = T
+
 
 [pipeline]
 ; these names refer to sections later in the file:
@@ -13,14 +17,15 @@ modules = consistency camb act_dr6_lens
 values = examples/act-dr6-lens-values.ini
 priors = examples/act-dr6-lens-priors.ini
 quiet=F
-debug=T
+debug=F
 timing=F
 
 
 [act_dr6_lens]
 file = ./likelihood/act-dr6-lens/act_dr6_lenslike_interface.py
 
-
+[output]
+filename = output/act-dr6-lens.txt
 
 ; The consistency module translates between our chosen parameterization
 ; and any other that modules in the pipeline may want (e.g. camb)
@@ -34,12 +39,12 @@ mode = cmb
 lmax = 4000          ;max ell to use for cmb calculation
 lens_margin = 1250
 lens_potential_accuracy = 4
-feedback=2         ;amount of output to print
+feedback=0         ;amount of output to print
 AccuracyBoost=1.0 ;CAMB accuracy boost parameter
 lSampleBoost = 1.0
 lAccuracyBoost = 1.0
-do_tensors = True   ;include tensor modes
-do_lensing = true    ;lensing is required w/ Planck data
+do_tensors = T   ;include tensor modes
+do_lensing = T    ;lensing is required w/ Planck data
 NonLinear = lens
 theta_H0_range = "20 100"
 halofit_version = mead2016
