--- a/background/astropy_background/module.yaml
+++ b/background/astropy_background/module.yaml
@@ -14,21 +14,20 @@ assumptions:
     - "Various depending on model choice"
 
 explanation: |
-    The astropy cosmology library can compute background evolution distances as a function
+    "The astropy cosmology library can compute background evolution distances as a function
     of redshift for a range of different cosmologies:
-
-    - FlatLambdaCDM
-    - FlatwCDM
-    - Flatw0waCDM
-    - LambdaCDM
-    - wCDM
-    - w0waCDM
-    - w0wzCDM
-    - w0wzCDM
-    - wpwaCDM
+		FlatLambdaCDM
+		FlatwCDM
+		Flatw0waCDM
+		LambdaCDM
+		wCDM
+		w0waCDM
+		w0wzCDM
+		w0wzCDM
+		wpwaCDM
 
     This module requires the user to choose one of these models and then will read
-    the appropriate parameters for that model and compute a range of distance measures.
+    the appropriate parameters for that model and compute a range of distance measures."
 
 # List of parameters that can go in the params.ini file in the section for this module    
 params:
@@ -44,6 +43,20 @@ params:
         meaning: "Name of the astropy model to use"
         type: str
         default:
+
+		[('H0', 'hubble'), ('Om0', 'omega_m'), ('Ode0', 'omega_lambda'),
+										  ('w0', 'w'), ('wz', 'wz')],
+
+		[('H0', 'hubble'), ('Om0', 'omega_m'), ('Ode0', 'omega_lambda'), 
+										  ('wp', 'wp'),('wa', 'wa'), ('zp', 'zp')],
+
+
+
+
+
+wp
+
+
 
 
 inputs:
