--- a/shear/cl_to_xi_nicaea/module.yaml
+++ b/shear/cl_to_xi_nicaea/module.yaml
@@ -13,7 +13,7 @@ assumptions:
 explanation: |
     "
     The correlation functions are related to the spectra via Bessel functions:
-    xi_{(+/-)}(theta) = \int_0^\infty C_\ell J_{(0,4)}(\ell \theta) \ell d\ell / 2\pi
+    :math:`xi_{(+/-)}(theta) = \int_0^\infty C_\ell J_{(0,4)}(\ell \theta) \ell d\ell / 2\pi`
 
     In this module that integral is done via a Hankel Transform.
 
