--- a/strong_lensing/h0licow/module.yaml
+++ b/strong_lensing/h0licow/module.yaml
@@ -30,7 +30,7 @@ explanation: |
     as collected in Wong et al., 2019, arXiv:1907.04869
 
     Various different pieces of the likelihood can be switched on and off
-    using the data_ parameters.  The default configuration matches that
+    using the data\_ parameters.  The default configuration matches that
     in the released MontePython code.
     "
 params:
