--- a/likelihood/pantheon_plus/module.yaml
+++ b/likelihood/pantheon_plus/module.yaml
@@ -12,18 +12,18 @@ cite:
 assumptions:
 -   Pantheon+ statistical and systematic analysis
 
-explanation: |
-    " Supernova IA can be used as standardisable candles,
+explanation: >
+    Supernova IA can be used as standardisable candles,
     letting us estimate a redshift-distance relation.
 
     The Pantheon+ sample collected together 1701 light curves of 1550 distinct Type Ia supernovae
 
     This module uses that data set to constrain the distance modulus
     vs redshift relation.
-
+    
     This version can optionally also include SH0ES HST measurements of H0 from Cepheid variables
     over 40 years of data.
-    "
+
 params:
     include_shoes:
         meaning: Whether to include SH0ES H0 measurements. Note that the parameter name has an o not a zero.
@@ -55,14 +55,14 @@ params:
         type: str
         default: pantheon
     likelihood_only:
-        meaning: Skip saving everything except the likelihood.  This prevents
+        meaning: >
+            Skip saving everything except the likelihood.  This prevents
             you from using e.g. the Fisher matrix sampler but can be faster for quick
             likelihoods
         type: bool
         default: false
     include_norm:
-        meaning: Include the normalizing constant at the start of the likelihood.  May
-            be needed when comparing models.
+        meaning: Include the normalizing constant at the start of the likelihood.  May be needed when comparing models.
         type: bool
         default: false
 inputs:
