--- a/shear/spectra/module.yaml
+++ b/shear/spectra/module.yaml
@@ -1,7 +1,7 @@
 #This is a template for module description files
 name: wl_spectra
 version: '1.0'
-purpose: Compute various weak lensing C_ell from P(k,z) with the Limber integral
+purpose: Compute various weak lensing C\_ell from P(k,z) with the Limber integral
 url: ''
 interface: interface.so
 attribution: [CosmoSIS team, Matt Becker]
@@ -10,8 +10,7 @@ cite: []
 assumptions:
 -   The Limber integral is valid on the scales in question
 
-explanation: |
-    "
+explanation: >
     DEPRECATED: You should use the module cosmosis-standard-library/structure/projection/project_2d.py instead.
 
     The Limber approximation integrates a 3D power spectrum over the radial
@@ -19,7 +18,7 @@ explanation: |
     which is only valid on smaller scales.
 
 
-    C_\ell =  A \int_0^{\chi_1} W_1(\chi) W_2(\chi) P(k=l/\chi, z(\chi)) / chi^2 d\chi
+    :math:`C_\ell =  A \int_0^{\chi_1} W_1(\chi) W_2(\chi) P(k=l/\chi, z(\chi)) / chi^2 d\chi`
 
     The full integral must integrate over k(\ell) also.
 
@@ -28,7 +27,7 @@ explanation: |
 
     Parts of this code and the underlying implementation of limber are based on cosmocalc:
     https://bitbucket.org/beckermr/cosmocalc-public
-    "
+
 params:
     n_ell:
         meaning: Number of log-spaced ell values to compute
@@ -112,7 +111,7 @@ inputs:
             meaning: Redshift values of n(z) samples
             type: real 1d
             default:
-        bin_:
+        bin\_:
             meaning: Bin n(z) values.  Need not be normalized. bin_1,
                 bin_2, bin_3, ....
             type: real 1d
@@ -218,39 +217,39 @@ outputs:
             meaning: Number of redshift bins used
             type: int
         bin_{i}_{j}:
-            meaning: C_ell (no l(l+1) factor) for (auto-correlation) bin i and j.
+            meaning: C\_ell (no l(l+1) factor) for (auto-correlation) bin i and j.
                 Only stores j<=i.
             type: real 1d
     magnification_magnification_cl:
         ell:
-            meaning: Sample ell values for output C_ell
+            meaning: Sample ell values for output C\_ell
             type: int 1d
         nbin:
             meaning: Number of redshift bins used
             type: int
         bin_{i}_{j}:
-            meaning: C_ell (no l(l+1) factor) for (auto-correlation) bin i and j.
+            meaning: C\_ell (no l(l+1) factor) for (auto-correlation) bin i and j.
                 Only stores j<=i.
             type: real 1d
     magnification_intrinsic_cl:
         ell:
-            meaning: Sample ell values for output C_ell
+            meaning: Sample ell values for output C\_ell
             type: int 1d
         nbin:
             meaning: Number of redshift bins used
             type: int
         bin_{i}_{j}:
-            meaning: C_ell (no l(l+1) factor) for (auto-correlation) bin i and j.
+            meaning: C\_ell (no l(l+1) factor) for (auto-correlation) bin i and j.
                 Only stores j<=i.
             type: real 1d
     magnification_shear_cl:
         ell:
-            meaning: Sample ell values for output C_ell
+            meaning: Sample ell values for output C\_ell
             type: int 1d
         nbin:
             meaning: Number of redshift bins used
             type: int
         bin_{i}_{j}:
-            meaning: C_ell (no l(l+1) factor) for (auto-correlation) bin i and j.
+            meaning: C\_ell (no l(l+1) factor) for (auto-correlation) bin i and j.
                 Only stores j<=i.
             type: real 1d
