--- a/structure/projection/module.yaml
+++ b/structure/projection/module.yaml
@@ -17,7 +17,7 @@ explanation: |
     direction to get a 2D angular power spectrum.  It is an approximation
     which is only valid on smaller scales.
     
-    :math:`C_\ell =  A \int_0^{\chi_1} W_1(\chi) W_2(\chi) P(k=(l+0.5)/\chi, z(\chi)) / \chi^2 d\chi`
+    :math:`C_\ell =  A \int_0^{\chi_1} W_1(\chi) W_2(\chi) P(k=(l+0.5)/\chi, z(\chi)) / chi^2 d\chi`
     
     The full integral must integrate over k(\ell) also.
     This module is a python interface to a Limber integrator written in C, and can 
@@ -29,7 +29,7 @@ explanation: |
     be inaccurate.
     
     Depending which spectra you ask for, it will look for different input P(k) value:
-
+    
     +-----------------------------+----------------------------+----------------------------+
     | Option name                 | Input-3d-spectrum          | Default output name        |
     +=============================+============================+============================+
@@ -85,7 +85,6 @@ explanation: |
     +-----------------------------+----------------------------+----------------------------+
     | nlgal-magnification         | matter_power_nl            | galaxy_magnification_cl    |
     +-----------------------------+----------------------------+----------------------------+
-    
 
 
     For each of the spectra listed above you can set a parameter in the parameter file 
