--- a/background/astropy_background/module.yaml
+++ b/background/astropy_background/module.yaml
@@ -14,8 +14,9 @@ assumptions:
     - "Various depending on model choice"
 
 explanation: |
-    "The astropy cosmology library can compute background evolution distances as a function
+    The astropy cosmology library can compute background evolution distances as a function
     of redshift for a range of different cosmologies:
+
     - FlatLambdaCDM
     - FlatwCDM
     - Flatw0waCDM
@@ -27,7 +28,7 @@ explanation: |
     - wpwaCDM
 
     This module requires the user to choose one of these models and then will read
-    the appropriate parameters for that model and compute a range of distance measures."
+    the appropriate parameters for that model and compute a range of distance measures.
 
 # List of parameters that can go in the params.ini file in the section for this module    
 params:
