--- a/shear/spectra/module.yaml
+++ b/shear/spectra/module.yaml
@@ -18,7 +18,8 @@ explanation: >
     which is only valid on smaller scales.
 
 
-    :math:`C_\ell =  A \int_0^{\chi_1} W_1(\chi) W_2(\chi) P(k=l/\chi, z(\chi)) / chi^2 d\chi`
+    :math:`C_\ell =  A \int_0^{\chi_1} W_1(\chi) W_2(\chi) P(k=l/\chi, z(\chi)) / \chi^2 d\chi`
+
 
     The full integral must integrate over k(\ell) also.
 
