--- a/number_density/smail/module.yaml
+++ b/number_density/smail/module.yaml
@@ -16,7 +16,7 @@ assumptions:
 explanation: >
     This module takes inputs that specify the underlying spectroscopic (true) redshift
     distribution of the galaxies in the survey.  It then convolves this with a photometric
-    error sigma(z) = sigma_0 (1+z) and optionally biases it.  It computes bin edges in the
+    error :math:`\sigma(z) = \sigma_0 (1+z)` and optionally biases it.  It computes bin edges in the
     survey assuming equal numbers in each.
     
     You can also specify fixed bin edges.
