--- a/structure/projection/module.yaml
+++ b/structure/projection/module.yaml
@@ -17,7 +17,7 @@ explanation: |
     direction to get a 2D angular power spectrum.  It is an approximation
     which is only valid on smaller scales.
     
-    :math:`C_\ell =  A \int_0^{\chi_1} W_1(\chi) W_2(\chi) P(k=(l+0.5)/\chi, z(\chi)) / chi^2 d\chi`
+    :math:`C_\ell =  A \int_0^{\chi_1} W_1(\chi) W_2(\chi) P(k=(l+0.5)/\chi, z(\chi)) / \chi^2 d\chi`
     
     The full integral must integrate over k(\ell) also.
     This module is a python interface to a Limber integrator written in C, and can 
