change ee2 installation like class

--- a/structure/EuclidEmulator2/Makefile
+++ b/structure/EuclidEmulator2/Makefile
@@ -1,8 +1,7 @@
 include ${COSMOSIS_SRC_DIR}/config/compilers.mk
 
 PYTHON ?= python
-PYTHONVERSION = $(shell $(PYTHON) -c 'import sys;print(f"{sys.version_info.major}.{sys.version_info.minor}")')
-PYTHONINSTALL = $(PWD)/ee_install/lib/python$(PYTHONVERSION)/site-packages
+PYTHONINSTALL = $(PWD)/ee_install
 
 DATA = ee2_bindata.dat
 HEADERS = src/cosmo.h src/emulator.h src/units_and_constants.h
@@ -11,7 +10,8 @@ SRC = src/euclidemu2.pyx src/cosmo.cxx src/emulator.cxx
 all: ee_install/done
 
 ee_install/done: $(SRC) $(HEADERS) $(DATA)
-	export CC=$(CC) CXX=$(CXX); export PYTHONPATH=${PYTHONPATH}:$(PYTHONINSTALL);  $(PYTHON) setup.py install   --prefix=$(PWD)/ee_install;  $(PYTHON)  setup.py install   --prefix=$(PWD)/ee_install
+	python --version
+	export CC=$(CC) CXX=$(CXX); export PYTHONPATH=${PYTHONPATH}:$(PYTHONINSTALL);  $(PYTHON) -m pip install --no-deps   --target=${PYTHONINSTALL} .
 	touch ee_install/done
 
 clean:
