--- a/examples/des-y1-values.ini
+++ b/examples/des-y1-values.ini
@@ -7,7 +7,7 @@ n_s          =  0.87      0.9676        1.07
 ; the likelihood will be the same, but the prior will
 ; be different.
 ; A_s          =  0.5e-09  2.260574e-09  5.0e-09
-sigma_8_input = 0.5  0.8341371714072584   1.0
+sigma_8      = 0.5  0.8341371714072584   1.0
 w            = -1.0
 omega_k      =  0.0
 tau          =  0.08
