--- a/examples/act-dr6-lens.ini
+++ b/examples/act-dr6-lens.ini
@@ -11,6 +11,11 @@ fatal_errors=T
 n_live = 1500
 verbose = T
 
+[emcee]
+walkers = 64
+samples = 1000
+nsteps = 5
+
 
 [pipeline]
 ; these names refer to sections later in the file:
@@ -26,7 +31,7 @@ timing=F
 file = ./likelihood/act-dr6-lens/act_dr6_lenslike_interface.py
 
 [output]
-filename = output/act-dr6-lens.txt
+filename = output/act-dr6-lens-emcee.txt
 
 ; The consistency module translates between our chosen parameterization
 ; and any other that modules in the pipeline may want (e.g. camb)
@@ -48,4 +53,4 @@ do_tensors = T   ;include tensor modes
 do_lensing = T    ;lensing is required w/ Planck data
 NonLinear = lens
 theta_H0_range = "20 100"
-halofit_version = mead2016
+halofit_version = takahashi
