Fix ACT PP normalization, thanks to David Dzingeleski

--- a/examples/act-dr6-lens.ini
+++ b/examples/act-dr6-lens.ini
@@ -29,6 +29,8 @@ timing=F
 
 [act_dr6_lens]
 file = ./likelihood/act-dr6-lens/act_dr6_lenslike_interface.py
+like_corrections = T
+variant = actplanck_baseline
 
 [output]
 filename = output/act-dr6-lens-emcee.txt
